--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.18.1",
     "connect-ensure-login": "^0.1.1",
